[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["Valkum <rudi.floren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
array2d = "0.2.1"
anyhow = "1.0"
itertools = "0.9"
petgraph = "0.5.1"
hashbrown = "0.9.1"
regex = "1.4.2"
string-interner = "0.12.1"
nom = "6.0.1"
lazy_static = "1.4.0"
rayon = "1.5"

num-integer = "0.1.44"
legion = "0.3.1"